--- a/scss/style.scss
+++ b/scss/style.scss
@@ -43,7 +43,7 @@ ul > li {
 
 
 .article {
-  background-color: #f0f0f0;
+  background-color: $light-font;
   text-align: center;
   padding: 5px;
   border: 5px solid rgba(0, 0, 0, 0.9);
@@ -61,7 +61,7 @@ ul > li {
 }
 
 .bigtext {
-  color: #f0f0f0;
+  color: $light-font;
   margin: 10px 50px;
 }
 .pizzavideo {
